# cpp_bazel_project

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  WORKSPACE  clang_build_commands.txt  requirements.in  requirements.txt
main/: BUILD  add_two_ints.h  add_two_ints.s  hello-world.cc  hello_pybind.cc  hello_world.s  test_hello_pybind.py
toolchain/: BUILD  cc_toolchain_config.bzl
