###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "cpp_pybind",
    repo_name = "com_cpp_pybind",
)

register_toolchains("//toolchain:toolchain")

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(
    name = "rules_python",
    version = "1.4.1",
)
bazel_dep(
    name = "pybind11_bazel",
    version = "2.13.6",
    repo_name = "pybind11",
)
bazel_dep(name = "eigen", version = "5.0.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_uv", version = "0.71.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.10.12",
)
use_repo(
    python,
    python_3_10 = "python_3_10_12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.10.12",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")
